.vendor/ruby/2.4.0/extensions/x86_64-linux/2.4.0/mysql-2.9.1/gem_make.out
current directory: /home/havokx/Desktop/api_etna/.vendor/ruby/2.4.0/gems/mysql-2.9.1/ext/mysql_api
/home/havokx/.rvm/rubies/ruby-2.4.0/bin/ruby -r ./siteconf20170322-114859-b49i6l.rb extconf.rb --with-mysql-config=/usr/bin/mysql_config
checking for mysql_ssl_set()... yes
checking for rb_str_set_len()... yes
checking for rb_thread_start_timer()... no
checking for mysql.h... yes
creating Makefile

To see why this extension failed to compile, please check the mkmf.log which can be found here:

  /home/havokx/Desktop/api_etna/.vendor/ruby/2.4.0/extensions/x86_64-linux/2.4.0/mysql-2.9.1/mkmf.log

current directory: /home/havokx/Desktop/api_etna/.vendor/ruby/2.4.0/gems/mysql-2.9.1/ext/mysql_api
make "DESTDIR=" clean

current directory: /home/havokx/Desktop/api_etna/.vendor/ruby/2.4.0/gems/mysql-2.9.1/ext/mysql_api
make "DESTDIR="
compiling mysql.c
mysql.c: In function ‘stmt_bind_result’:
mysql.c:1320:74: error: ‘rb_cFixnum’ undeclared (first use in this function)
  else if (argv[i] == rb_cNumeric || argv[i] == rb_cInteger || argv[i] == rb_cFixnum)
                                                                          ^
mysql.c:1320:74: note: each undeclared identifier is reported only once for each function it appears in
mysql.c: At top level:
cc1: warning: unrecognized command line option "-Wno-self-assign" [enabled by default]
cc1: warning: unrecognized command line option "-Wno-constant-logical-operand" [enabled by default]
cc1: warning: unrecognized command line option "-Wno-parentheses-equality" [enabled by default]
cc1: warning: unrecognized command line option "-Wno-tautological-compare" [enabled by default]
make: *** [mysql.o] Error 1

make failed, exit code 2
